# diktafon

./: .gitignore  .metadata  CHANGELOG.md  LICENCE.md  PRIVACY.md  README.html  README.md  l10n.yaml  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/models/: README.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 2004.txt  2005.txt  4004.txt  63.txt  72.txt  83.txt  93.txt
integration_test/: l10n_screens_test.dart  m1_flow_test.dart  m2_transcription_test.dart  m3_summaries_test.dart  m4_first_run_test.dart  readme_language_shots_test.dart  seek_verify_test.dart  store_screenshots_test.dart  test_env.dart  tone_wav.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/application/: providers.dart  recording_controller.dart
lib/data/db/: database.dart  database.g.dart
lib/data/files/: audio_file_store.dart
lib/data/repositories/: cassette_repository.dart  mappers.dart  memo_repository.dart  settings_repository.dart
lib/domain/: models.dart  palette.dart  tape.dart
lib/l10n/: app_cs.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_ko.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_tr.arb  l10n.dart
lib/presentation/screens/: backup_screen.dart  cassette_screen.dart  first_run_screen.dart  home_screen.dart  settings_screen.dart
lib/presentation/theme/: tape_colors.dart  theme.dart
lib/presentation/widgets/: cassette_card.dart  content_width.dart  deck.dart  ink_progress_bar.dart  ink_toggle.dart  level_meter.dart  pixel_tape.dart  settings_rows.dart  timeline_bar.dart  transcript_view.dart
lib/services/audio/: pcm_decoder.dart  pcm_highpass.dart  recorder_service.dart  tape_player_service.dart
lib/services/export/: cassette_exporter.dart
lib/services/import/: cassette_importer.dart
lib/services/notifications/: download_notifier.dart  local_notifications_sink.dart
lib/services/processing/: job_queue.dart
lib/services/providers/: model_manager.dart  summarization_provider.dart  transcription_provider.dart
lib/services/providers/llm/: llama_bindings.dart  llama_worker.dart  llm_model_manager.dart  llm_summarization_provider.dart  summary_prompts.dart  transcript_cleanup.dart
lib/services/providers/whisper/: whisper_bindings.dart  whisper_model_manager.dart  whisper_transcription_provider.dart  whisper_worker.dart  word_timing.dart
lib/services/system/: device_ram.dart  system_settings.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
native/: CMakeLists.txt  README.md
native/src/: dk_llama.cpp  dk_llama.h  dk_whisper.cpp  dk_whisper.h
test/: l10n_parity_test.dart
test/data/: audio_file_store_test.dart  repository_test.dart
test/domain/: tape_test.dart
test/presentation/: backup_screen_test.dart  model_picker_test.dart  pixel_tape_test.dart  summary_picker_test.dart  transcript_view_test.dart
test/quality/: README.md  quality_harness.dart  transcription_quality_test.dart  wer.dart  wer_test.dart
test/services/: cassette_exporter_test.dart  cassette_importer_test.dart  confidence_filter_test.dart  download_notifier_test.dart  job_queue_test.dart  llm_provider_real_test.dart  pcm_highpass_test.dart  summary_prompts_test.dart  tape_player_chime_test.dart  transcript_cleanup_test.dart  whisper_model_manager_test.dart  whisper_provider_real_test.dart  word_timing_test.dart
tool/icon/: generate_icons.py
tool/ios/: build_engine_frameworks.sh
tool/screenshots/: frame_screenshots.py
tool/store/: feature_graphic.py
(+5 files in other folders)
